<resources>
    <string name="app_name">KarteBlok</string>
    <string name="app_title">Karte blokovi</string>
    <string name="bela_title">BELA</string>
    <string name="remi_title">REMI</string>
    <string name="notes_desc">decoration image of notepad</string>
    <string name="about_title">ABOUT</string>
    <string name="arrow_back_desc">return arrow</string>
    <string name="app_about_desc">Aplikacija za zapisivanje rezultate vaših kartaških partija.</string>
    <string name="git_title">App GitHub</string>
    <string name="github_logo_desc">GitHub logo</string>
    <string name="github_text">Kod aplikacije je open-sourcan i dostupan na GitHubu. Ako misliš da imaš dobar dodatak pošalji pull-request i možda bude prihvaćen ;)</string>
    <string name="dev_name">Tvrtko Ivasic</string>
    <string name="dev_title_text">Developer:</string>
    <string name="tvrda_studios_logo_desc">tvrda studios logo</string>
    <string name="null_num">0</string>
    <string name="team1_title">Mi</string>
    <string name="team2_title">Vi</string>
    <string name="score_examp">216</string>
    <string name="score_examp2">534</string>
    <string name="separator_desc">dashed separator line</string>
    <string name="new_enter_text">+ NOVI UNOS</string>
    <string name="score_example">96</string>
    <string name="score_example2">116</string>
    <string name="separator_image_desc">separator image</string>
    <string name="team1_first_player">Ja</string>
    <string name="team1_second_player">Moj kolega</string>
    <string name="team2_first_player">Protivnik desno</string>
    <string name="team2_second_player">Protivnik lijevo</string>
    <string name="clear_game_title">Obrisati partiju?</string>
    <string name="cancel_text">ODUSTANI</string>
    <string name="clear_text">Obriši</string>
    <string name="clear_game_text">Ukoliko odaberete opciju izbriši izbrisati će te postojeće zapise i rezultat igre</string>
    <string name="call_text">Zvao:</string>
    <string name="entry_text">UNESI</string>
    <string name="call_20_text">+ 20</string>
    <string name="call_100_text">+ 100</string>
    <string name="call_200_text">+ 200</string>
    <string name="call_50_text">+ 50</string>
    <string name="call_150_text">+ 150</string>
    <string name="stiglja_text">Štiglja</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="btn_clear">x</string>
    <string name="number_zero">0</string>
    <string name="btn_backspace"><![CDATA[<]]></string>
</resources>