<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/score1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/score_example"
        android:textAlignment="center"
        android:layout_marginTop="4dp"
        android:textAppearance="@style/Headline1DarkCenter"
        android:textColor="@color/black_lighter" />

    <ImageView
        android:id="@+id/image_separator"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:contentDescription="@string/separator_image_desc"
        android:src="@drawable/all_signs" />

    <TextView
        android:id="@+id/score2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/score_example2"
        android:layout_marginTop="4dp"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        android:textColor="@color/black_lighter" />

</LinearLayout>