<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_grey">

    <TextView
        android:id="@+id/call_20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/call_20_text"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        app:layout_constraintEnd_toStartOf="@+id/call_100"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/call_100"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/call_100_text"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        app:layout_constraintEnd_toStartOf="@+id/call_200"
        app:layout_constraintStart_toEndOf="@id/call_20"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/call_200"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/call_200_text"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/call_100"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/call_50"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/call_50_text"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/call_150"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/call_20" />

    <TextView
        android:id="@+id/call_150"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/call_150_text"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/stiglja"
        app:layout_constraintStart_toEndOf="@id/call_50"
        app:layout_constraintTop_toBottomOf="@id/call_100" />

    <TextView
        android:id="@+id/stiglja"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/stiglja_text"
        android:textAlignment="center"
        android:textAppearance="@style/Headline1DarkCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/call_150"
        app:layout_constraintTop_toBottomOf="@id/call_200" />

</androidx.constraintlayout.widget.ConstraintLayout>